try z-index and attrs for iframe for correct layering of menu on top of iframes

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     transition: all .5s ease;
+    z-index: 1000;
 
     @include mobile {
         top: 35px;
